# biohub-cell-tracking

./: .gitignore  README.md  pyproject.toml
configs/: README.md
data/: README.md
experiments/: README.md
notebooks/: README.md
scripts/: build_appearance_dataset.py  calibrate_detection.py  download_data.py  evaluate_metric_demo.py  freeze_appearance_policy.py  inspect_dataset.py  make_smoke_submission.py  run_baseline.py  score_appearance.py  summarize_appearance_holdout.py  train_appearance.py  validate_appearance.py  validate_detectors.py  validate_divisions.py  validate_linkers.py  validate_pruning.py
src/biohub/: __init__.py  appearance.py  appearance_evaluation.py  appearance_model.py  constants.py  detect.py  io.py  link.py  metric.py  split.py  submission.py
submissions/: README.md
tests/: test_appearance.py  test_appearance_evaluation.py  test_detect_link.py  test_freeze_appearance_policy.py  test_io.py  test_metric.py  test_split.py  test_submission.py  test_summarize_appearance_holdout.py  test_train_appearance.py  test_validate_appearance.py  test_validate_pruning.py
